[gd_scene load_steps=4 format=3 uid="uid://ba4fmqi87is4r"]

[ext_resource type="Script" path="res://Scripts/shield.gd" id="1_g274u"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a0rai"]
radius = 15.0333

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qeewx"]
radius = 2.0
height = 14.0

[node name="Shield" type="Area2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_g274u")

[node name="Explosion" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="Radius" type="CollisionShape2D" parent="Explosion"]
shape = SubResource("CircleShape2D_a0rai")

[node name="ShieldCollider" type="CollisionShape2D" parent="."]
position = Vector2(10, 0)
shape = SubResource("CapsuleShape2D_qeewx")

[node name="ShieldTimer" type="Timer" parent="ShieldCollider"]
unique_name_in_owner = true
wait_time = 3.0

[connection signal="area_entered" from="Explosion" to="." method="_on_explosion_area_entered"]
[connection signal="area_exited" from="Explosion" to="." method="_on_explosion_area_exited"]
[connection signal="timeout" from="ShieldCollider/ShieldTimer" to="." method="_on_shield_timer_timeout"]
